k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: example-plugin
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: example-plugin
